crates/panache-parser/tests/snapshots/yaml__yaml_suite_JEF9__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: JEF9/00
input: "- |+\n\n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
