crates/panache-parser/tests/snapshots/yaml__yaml_suite_JEF9__01.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: JEF9/01
input: "- |+\n   \n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
